syntax = "proto3";

package auth;

option go_package = "local.auth.v1;authv1";

message LoginRequest {
  uint32 app_id = 1 ;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {

}

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}
